[gd_scene load_steps=7 format=3 uid="uid://bljxg5lihsjy1"]

[ext_resource type="Script" uid="uid://b0xpasud34p2b" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://rh5usbu6lo53" path="res://dtlkarte.svg" id="2_7mycd"]
[ext_resource type="Script" uid="uid://curp82rwfi0d2" path="res://map.gd" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://ivho25spx00" path="res://word_container.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://d2fxny5lp56yo" path="res://GCC2D.tscn" id="4_272bh"]
[ext_resource type="Script" path="res://control.gd" id="5_7mycd"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lquwl")

[node name="Node" type="Node" parent="."]

[node name="Label_Timer" type="Timer" parent="Node"]
wait_time = 2.0
one_shot = true

[node name="SubViewPortContainer" type="SubViewportContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="SubViewPort" type="SubViewport" parent="SubViewPortContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="map" type="TextureRect" parent="SubViewPortContainer/SubViewPort"]
offset_top = 1250.0
offset_right = 5000.0
offset_bottom = 8250.0
rotation = -1.5708
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_7mycd")
script = ExtResource("3_lquwl")

[node name="GCC2D" parent="SubViewPortContainer/SubViewPort" instance=ExtResource("4_272bh")]
position = Vector2(920, 573)
rotation_gesture = 0

[node name="Score_Tracker" type="Label" parent="."]
offset_left = 916.0
offset_top = 7.0
offset_right = 1146.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.277)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
text = "Punkte"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Popup" type="Label" parent="."]
offset_left = 224.0
offset_top = 288.0
offset_right = 924.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.277)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 50
text = "Distanz"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("5_7mycd")

[node name="unten" parent="Control" instance=ExtResource("4_1bvp3")]
layout_mode = 0
offset_left = 351.0
offset_top = 508.0
offset_right = 801.0
offset_bottom = 648.0
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 13
number = 2

[node name="oben" parent="Control" instance=ExtResource("4_1bvp3")]
layout_mode = 0
offset_left = 351.0
offset_top = 20.0
offset_right = 801.0
offset_bottom = 160.0
rotation = 3.14159
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 13

[node name="links" parent="Control" instance=ExtResource("4_1bvp3")]
layout_mode = 0
offset_left = -145.0
offset_top = 264.0
offset_right = 305.0
offset_bottom = 404.0
rotation = 1.5708
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 13
number = 3

[node name="rechts" parent="Control" instance=ExtResource("4_1bvp3")]
layout_mode = 0
offset_left = 847.0
offset_top = 264.0
offset_right = 1297.0
offset_bottom = 404.0
rotation = 4.71239
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 13
number = 1

[connection signal="game_end" from="." to="." method="_on_game_end"]
[connection signal="timeout" from="Node/Label_Timer" to="." method="_on_label_timer_timeout"]
[connection signal="marker_placed" from="SubViewPortContainer/SubViewPort/map" to="." method="_on_marker_placed"]
